# aoc2024

./: .flake8  .gitignore  pyproject.toml
day01/: listdist.py
day02/: safe_levels.py
day03/: part1.sh  part2.sh
day04/: xmas_p1.py  xmas_p2.py
day05/: safety_manual.py
day06/: guard.py
day07/: operators.py
day08/: antennas.py
day09/: diskmap.py
day11/: stones.py
day12/: fences.py
day13/: README.md  mkcsv.sh  solution.ods
day14/: README.md  pbm.py  pbm2mp4.sh  robots.py
day15/: fish.py  fish.py.bak.py  fish2.py
