[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Gianluca Mascolo <gianluca@gurutech.it>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.black]
line-length = 200

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
